# endless-disk-game

./: README.md
client/: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/js/: index.ts
client/src/: client_desktop.rs  client_main.rs  client_wasm.rs  debug.rs  game.rs  graphics.rs  lib.rs  main.rs  player.rs  sprite.rs  texture.rs  world.rs
client/src/shaders/: tutorial.wgsl
client/static/: index.html
client/tests/: app.rs
server/: Cargo.toml  README.md
server/src/: main.rs
