[package]
name = "endless_game"
description = "A prototype of a simple rust-based MMO"
version = "0.1.0"
authors = ["reilemx@gmail.com"]
categories = ["wasm", "games"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[dependencies]
# Logging library interface
log = "0.4"
# Game engine
bevy = { version = "0.8", features = [ "dynamic" ] }
