[package]
name = "endless_disk"
description = "A prototype of a simple rust-based MMO"
version = "0.1.0"
authors = ["reilemx@gmail.com"]
categories = ["wasm", "games"]
readme = "README.md"
edition = "2021"

[lib]
name = "endless_game"
crate-type = ["cdylib", "rlib"]

[features]
default = ["bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[dependencies]
# Logging library interface
log = "0.4"
# Debugger
bevy-inspector-egui = { version = "0.12.1", optional = true }
# Game engine, added here to resolve imports
bevy = { version = "0.8", default-features = false }

## Non WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Game engine, specify dynamic linking
bevy = { version = "0.8", features = ["dynamic"] }

## WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Game engine, enable all defaults
bevy = { version = "0.8" }
