[package]
name = "endless_disk"
description = "A prototype of a simple rust-based MMO"
version = "0.1.0"
authors = ["reilemx@gmail.com"]
categories = ["wasm", "games"]
readme = "README.md"
edition = "2021"

[lib]
name = "endless_game"
crate-type = ["cdylib", "rlib"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[features]
dev = ["bevy/dynamic"]

[dependencies]
# Logging library interface
log = "0.4"
# Debugger
bevy-inspector-egui = { version = "0.12.1" }
# Game engine, added here to resolve imports
bevy = { version = "0.8" }

## WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Panic hooks in wasm
console_error_panic_hook = "0.1.7"
